# scrivid

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
docs/en/: conf.py  index.md
docs/en/reference/: reference.rst
sample/01_FIRST/: main.py
scrivid/: __init__.py  _id_check.py  _separating_instructions.py  abc.py  compile_video.py  errors.py  file_access.py  metadata.py  properties.py
scrivid/_file_objects/: __init__.py  _operations.py  _status.py  adjustments.py  files.py  images.py  properties.py
scrivid/_motion_tree/: __init__.py  _dynamic_attributes.py  functions.py  nodes.py
scrivid/_utils/: __init__.py  sentinel_objects.py  temporary.py  ticking.py
scrivid/_video_crafting/: __init__.py  _frame_drawing.py  _frame_info.py  _video_stitching.py  compile_video.py
scrivid/adjustments/: __init__.py  _type_check.py  core.py  hide.py  move.py  show.py
scrivid/motion_tree/: __init__.py  _dynamic_attributes.py  functions.py
scrivid/qualms/: __init__.py  _add_to_list.py  _coordinates.py  _index.py  drawing.py  drawing_confliction.py  interface.py  out_of_range.py
tests/: conftest.py  functions.py  test_abc.py  test_errors.py  test_exceptions.py  test_exists.py  test_file_objects.py  test_images.py  test_metadata.py  test_motion_tree.py  test_package.py  test_properties.py  test_qualms.py  test_videos.py
tests/samples/: empty.py  figure_eight.py  image_drawing.py  notatruetest.py  overlap.py  slide.py
