[metadata]
name = scrivid
version = 0.0.0
description = A Python library to create instructions for a generated video.
author = TNTMaster370
license = MIT
license_file = LICENSE
platforms = win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = scrivid
install_requires =
    Pillow>=9.3
    moviepy>=1
python_requires = >=3.8
zip_safe = no

[options.package_data]
scripted_video = py.typed

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[flake8]
max-line-length = 120