[metadata]
name = scrivid
version = 0.1.0
description = A Python library to create instructions for a generated video.
author = TNTMaster370
license = MIT
license_file = LICENSE.md
platforms = win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = scrivid
install_requires =
    Pillow>=9.3
    ffmpeg-python>=0.2.0
    sortedcontainers>2
python_requires = >=3.8
zip_safe = no

[options.package_data]
scrivid = py.typed

[options.extras_require]
testing =
    pytest>=6.0
    opencv-python>=4.8
    flake8>=3.9
    tox>=3.24

[flake8]
extend-ignore = W291
max-line-length = 120
