[metadata]
name = scrivid
version = attr: scrivid._version.__version__  
# Instantiating it as `scrivid.__version__` results in so many shaky imports 
# from the root-level `__init__.py`, that it's just easier to get directly,
# even though it's "protected".
description = A Python library to create instructions for a generated video.
author = Trystyn Coté
license = MIT
license_file = LICENSE.md
platforms = win32
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Other Audience
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Multimedia :: Graphics :: Editors :: Raster-Based

[options]
packages = scrivid
install_requires =
    attrs>=23.1.0
    Pillow>=9.3
    ffmpeg-python>=0.2.0
    sortedcontainers>2
python_requires = >=3.8
zip_safe = no

[options.package_data]
scrivid = py.typed

[options.extras_require]
testing =
    pytest>=6.0
    opencv-python>=4.8
    flake8>=3.9
    tox>=3.24

[flake8]
extend-ignore = W291
max-line-length = 120
